--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@test/b",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@test/a": "workspace:*"
+  }
 }
